# VPR-data_subscriber

./: .gitignore  README.md  pyproject.toml  requirements.txt
.aws/: config
.github/workflows/: data_subscriber.yml
github/workflows/: data_subscriber.yml
notebooks/: VPR_Kafka_suscriber.ipynb  VPR_suscriber.ipynb  orders_consumer_delta.ipynb
src/: functions.py  main.py  schemas.py  spark_session.py
