[tool.poetry]
name = "vpr-data-suscriber"
version = "0.1.0"
description = ""
authors = ["mgranica <migue.granica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
delta-spark = "^3.2.0"
jupyterlab = "^4.2.5"
boto3 = "^1.34"
ipdb = "^0.13.13"
findspark = "^2.0"
numpy = "^2.0.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
